package ro.uaic.info.game.objects.enemy;

import ro.uaic.info.engine.object.GameObject;

public interface Enemy extends GameObject {

}
